crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_term-graph.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The terms reachable from a term over see_also within --max-hops (default 1, at most 5), sorted by id, the term itself left out.

Usage: specforge product term-graph [OPTIONS] <TERM>

Arguments:
  <TERM>
          The term id

Options:
      --max-hops <MAX_HOPS>
          How many see_also hops to follow (default 1; above 5 counts as 5)

      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
