crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_unscheduled-features.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
The features no milestone lists, sorted by id, with how many features there are and how many are scheduled.

Usage: specforge product unscheduled-features [OPTIONS]

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
