crates/specforge-cli/tests/snapshots/tests__extension_surfaces__help_weighted-milestone-completion.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: help
---
A milestone's completion weighted by effort (xs=1, s=2, m=3, l=5, xl=8; a feature without one weighs as m), with its features per effort level.

Usage: specforge product weighted-milestone-completion [OPTIONS] <MILESTONE>

Arguments:
  <MILESTONE>
          The milestone id

Options:
      --path <PATH>
          Path to the project
          
          [default: .]

      --format <FORMAT>
          Output format
          
          [default: human]
          [possible values: human, json]

  -h, --help
          Print help (see a summary with '-h')
