crates/specforge-cli/tests/snapshots/tests__extension_surfaces__product_tool_names.snap
---
source: crates/specforge-cli/tests/extension_surfaces.rs
expression: names
---
[
  "specforge.query",
  "specforge.validate",
  "specforge.analyze",
  "specforge.export",
  "specforge.trace",
  "specforge.search",
  "specforge.explain",
  "specforge.schema",
  "specforge.model",
  "specforge.outline_extensions",
  "specforge.coverage",
  "specforge.stats",
  "specforge.list",
  "specforge.inspect",
  "specforge.find_definition",
  "specforge.find_references",
  "specforge.outline",
  "specforge.suggest_fixes",
  "specforge.format",
  "specforge.rename",
  "specforge.init",
  "specforge.add_extension",
  "specforge.remove_extension",
  "specforge.migrate",
  "specforge.extensions",
  "specforge.providers",
  "specforge.doctor",
  "specforge.collect",
  "specforge.render",
  "specforge.infer_progress",
  "specforge.infer_gaps",
  "specforge.infer_session",
  "specforge.find_implementation",
  "specforge.find_spec_for_source",
  "specforge.product.features",
  "specforge.product.journeys",
  "specforge.product.deliverables",
  "specforge.product.milestones",
  "specforge.product.modules",
  "specforge.product.terms",
  "specforge.product.personas",
  "specforge.product.channels",
  "specforge.product.releases",
  "specforge.product.milestone_completion",
  "specforge.product.journey_coverage",
  "specforge.product.feature_impact",
  "specforge.product.feature_dependents",
  "specforge.product.persona_features",
  "specforge.product.channel_features",
  "specforge.product.deliverable_traceability",
  "specforge.product.feature_deliverables",
  "specforge.product.persona_channels",
  "specforge.product.deliverable_personas",
  "specforge.product.deliverable_completion",
  "specforge.product.release_completion",
  "specforge.product.deliverable_priority",
  "specforge.product.unscheduled_features",
  "specforge.product.owner_workload",
  "specforge.product.feature_ordering",
  "specforge.product.critical_path",
  "specforge.product.module_depth",
  "specforge.product.module_coupling",
  "specforge.product.deliverable_dependents",
  "specforge.product.coverage_matrix",
  "specforge.product.channel_coverage_matrix",
  "specforge.product.feature_overlap",
  "specforge.product.term_graph",
  "specforge.product.term_clusters",
  "specforge.product.term_density",
  "specforge.product.milestone_timeline",
  "specforge.product.milestone_velocity",
  "specforge.product.weighted_milestone_completion",
  "specforge.product.bulk_status",
  "specforge.product.health"
]
